--- a/Changelog
+++ b/Changelog
@@ -1,2 +1,5 @@
 2013-10-11
 * added rsyslog config
+2013-10-29
+* remove host definition from global config
+* remove samba nss and pam definition from global config
